tests/type_check/statement/call_wrong_arg_type.err.expected
error: at 5:13: [TC-CallArgTypeMismatch] In function 'f', block 'entry': Call argument 0 type mismatch. Expected i64, found bool
   |
 5 |             call takes_num(true);
   |             ^^^^^^^^^^^^^^^^^^^^
